DeptScheduler fixed