@@ -2,191 +2,163 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 
 import java.io.File;
 import java.io.IOException;
-import java.io.InputStream;
-import java.nio.file.Files;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
-import java.nio.file.Path;
-import java.nio.file.Paths;
 
 public class JSONMethods {
 
-    private static final String SCHEDULER_JSON_PATH = "CSE3063F24P1_GRP14/src/resources/department_scheduler.json";
+    private static final String COURSE_JSON_PATH = "CSE3063F24P1_GRP14/src/resources/course.json";
+    private static final String STUDENT_JSON_PATH = "CSE3063F24P1_GRP14/src/resources/Students/";
+    private static final String DEPARTMENT_SCHEDULER_JSON_PATH = "CSE3063F24P1_GRP14/src/resources/department_scheduler.json";
+    private static final String ADVISORS_JSON_PATH = "CSE3063F24P1_GRP14/src/resources/Advisors/";
 
+    // Tüm kursları JSON'dan yükler
     public List<Course> loadAllCourses() {
-        ObjectMapper objectMapper = new ObjectMapper();
         try {
-            InputStream inputStream = JSONMethods.class.getClassLoader().getResourceAsStream("./resources/course.json");
-            return List.of(objectMapper.readValue(inputStream, Course[].class));
+            ObjectMapper objectMapper = new ObjectMapper();
+            File file = new File(COURSE_JSON_PATH);
+            return Arrays.asList(objectMapper.readValue(file, Course[].class));
         } catch (IOException e) {
-            e.printStackTrace();
-            return List.of(); // Return empty list in case of error
+            System.err.println("Error loading courses from JSON: " + e.getMessage());
+            return new ArrayList<>();
         }
     }
 
+    // JSON'dan öğrenci yükler
+    public Student loadStudent(String studentId) {
+        try {
+            ObjectMapper objectMapper = new ObjectMapper();
+            File studentFile = new File(STUDENT_JSON_PATH + studentId + ".json");
+            return objectMapper.readValue(studentFile, Student.class);
+        } catch (IOException e) {
+            System.err.println("Error loading student from JSON: " + e.getMessage());
+            return null;
+        }
+    }
+
+    // Öğrenciyi JSON dosyasına kaydeder
+    public void saveStudentToFile(Student student) {
+        try {
+            ObjectMapper objectMapper = new ObjectMapper();
+            File studentFile = new File(STUDENT_JSON_PATH + student.getStudentID() + ".json");
+            objectMapper.writerWithDefaultPrettyPrinter().writeValue(studentFile, student);
+            System.out.println("Student saved to JSON file successfully!");
+        } catch (IOException e) {
+            System.err.println("Error saving student to JSON file: " + e.getMessage());
+        }
+    }
+
+    // Öğrenciyi JSON dosyasında günceller
+    public void updateStudentInJson(Student updatedStudent) {
+        try {
+            ObjectMapper objectMapper = new ObjectMapper();
+            File studentFile = new File(STUDENT_JSON_PATH + updatedStudent.getStudentID() + ".json");
+
+            if (studentFile.exists()) {
+                objectMapper.writerWithDefaultPrettyPrinter().writeValue(studentFile, updatedStudent);
+                System.out.println("Student JSON updated successfully!");
+            } else {
+                System.err.println("Student JSON file not found for update.");
+            }
+        } catch (IOException e) {
+            System.err.println("Error updating student JSON: " + e.getMessage());
+        }
+    }
+
+    // JSON'dan belirli bir kursu yükler
+    public Course loadCourseFromJson(String courseId) {
+        try {
+            ObjectMapper objectMapper = new ObjectMapper();
+            File file = new File(COURSE_JSON_PATH);
+            List<Course> courses = Arrays.asList(objectMapper.readValue(file, Course[].class));
+            return courses.stream().filter(course -> course.getCourseId().equals(courseId)).findFirst().orElse(null);
+        } catch (IOException e) {
+            System.err.println("Error loading course from JSON: " + e.getMessage());
+            return null;
+        }
+    }
+
+    // Danışmanları JSON dosyasından yükler
+    public List<Advisor> loadAllAdvisors() {
+        List<Advisor> advisors = new ArrayList<>();
+        try {
+            File advisorsDir = new File(ADVISORS_JSON_PATH);
+            File[] advisorFiles = advisorsDir.listFiles((dir, name) -> name.endsWith(".json"));
+
+            if (advisorFiles != null) {
+                ObjectMapper objectMapper = new ObjectMapper();
+                for (File advisorFile : advisorFiles) {
+                    Advisor advisor = objectMapper.readValue(advisorFile, Advisor.class);
+                    advisors.add(advisor);
+                }
+            } else {
+                System.out.println("No advisor files found in the directory.");
+            }
+        } catch (IOException e) {
+            System.err.println("Error loading advisors from JSON: " + e.getMessage());
+        }
+        return advisors;
+    }
+
+    // Bölüm planlayıcısını JSON dosyasından yükler
     public DepartmentScheduler loadDepartmentScheduler() {
         try {
             ObjectMapper objectMapper = new ObjectMapper();
-            File file = new File(SCHEDULER_JSON_PATH);
+            File schedulerFile = new File(DEPARTMENT_SCHEDULER_JSON_PATH);
 
-            // JSON dosyasını okuyarak DepartmentScheduler nesnesini döndürüyoruz
-            return objectMapper.readValue(file, DepartmentScheduler.class);
+            if (schedulerFile.exists()) {
+                return objectMapper.readValue(schedulerFile, DepartmentScheduler.class);
+            } else {
+                System.err.println("Department scheduler JSON file not found.");
+                return null;
+            }
         } catch (IOException e) {
             System.err.println("Error loading department scheduler from JSON: " + e.getMessage());
             return null;
         }
     }
 
-    public Student loadStudent(String studentId) throws IOException {
-        ObjectMapper objectMapper = new ObjectMapper();
-        String resourcePath = "./resources/Students/" + studentId + ".json";
-        InputStream inputStream = JSONMethods.class.getClassLoader().getResourceAsStream(resourcePath);
-
-        if (inputStream == null) {
-            throw new IOException("Resource not found: " + resourcePath);
-        }
-
-        return objectMapper.readValue(inputStream, Student.class);
-    }
-
-
-    public Advisor loadAdvisor(String advisorId) throws IOException {
-        ObjectMapper objectMapper = new ObjectMapper();
-        String resourcePath = "./resources/Advisors/" + advisorId + ".json";
-        InputStream inputStream = JSONMethods.class.getClassLoader().getResourceAsStream(resourcePath);
-
-        if (inputStream == null) {
-            throw new IOException("Resource not found: " + resourcePath);
-        }
-
-        return objectMapper.readValue(inputStream, Advisor.class);
-    }
-
-    private final String STUDENT_JSON_PATH = "CSE3063F24P1_GRP14/src/resources/Students/";
-
-    public List<Advisor> loadAllAdvisors() throws IOException {
-        File advisorsDir = new File("CSE3063F24P1_GRP14/src/resources/Advisors/");
-        List<Advisor> advisors = new ArrayList<Advisor>();
-
-        // Check if directory exists and list files
-        if (advisorsDir.exists() && advisorsDir.isDirectory()) {
-            File[] advisorFiles = advisorsDir.listFiles();
-            if (advisorFiles != null) {
-                for (File file : advisorFiles) {
-                    if (file.isFile() && file.getName().endsWith(".json")) {
-                        String fileName = file.getName();
-                        String advisorId = fileName.substring(0, fileName.indexOf('.'));
-                        advisors.add(loadAdvisor(advisorId));
-                    }
-                }
-
-            }
-        } else {
-            System.out.println("The directory does not exist or is not a directory.");
-
-        }
-        return advisors;
-
-    }
-
-    public List<Student> loadAllStudents() throws IOException {
-        File studentsDir = new File("CSE3063F24P1_GRP14/src/resources/Students/");
-        List<Student> students = new ArrayList<Student>();
-
-        // Check if directory exists and list files
-        if (studentsDir.exists() && studentsDir.isDirectory()) {
-            File[] studentFiles = studentsDir.listFiles();
-            if (studentFiles != null) {
-                for (File file : studentFiles) {
-                    if (file.isFile() && file.getName().endsWith(".json")) {
-                        String fileName = file.getName();
-                        String studentId = fileName.substring(0, fileName.indexOf('.'));
-                        students.add(loadStudent(studentId));
-                    }
-                }
-
-            }
-        } else {
-            System.out.println("The directory does not exist or is not a directory.");
-
-        }
-        return students;
-
-    }
-
-
-    public void saveStudentToFile(Student student) throws IOException {
-        ObjectMapper mapper = new ObjectMapper();
-        String studentFileName = STUDENT_JSON_PATH + student.getStudentID() + ".json";
-        mapper.writeValue(new File(studentFileName), student);
-    }
-
-    public void updateStudentInJson(Student updatedStudent) {
+    // Belirli bir kursu günceller ve JSON'a kaydeder
+    public void updateCourseInJson(Course updatedCourse) {
         try {
             ObjectMapper objectMapper = new ObjectMapper();
-            File studentFile = new File("CSE3063F24P1_GRP14/src/resources/Students/" + updatedStudent.getStudentID() + ".json");
+            File file = new File(COURSE_JSON_PATH);
+            List<Course> courses = Arrays.asList(objectMapper.readValue(file, Course[].class));
 
-            // JSON dosyasından mevcut öğrenciyi yükle
-            Student existingStudent = null;
-            if (studentFile.exists()) {
-                existingStudent = objectMapper.readValue(studentFile, Student.class);
-            }
-
-            // Eğer mevcut öğrenci varsa, gerekli alanları güncelle
-            if (existingStudent != null) {
-                List<Course> updatedEnrolledCourses = new ArrayList<>(existingStudent.getEnrolledCourses());
-                List<Course> updatedRequestedCourses = new ArrayList<>(existingStudent.getRequestedCourses());
-
-                // EnrolledCourses'u güncelle
-                for (Course course : updatedStudent.getEnrolledCourses()) {
-                    if (!updatedEnrolledCourses.contains(course)) {
-                        updatedEnrolledCourses.add(course);
-                    }
-                }
-
-                // RequestedCourses'u güncelle
-                for (Course course : updatedStudent.getRequestedCourses()) {
-                    if (!updatedRequestedCourses.contains(course)) {
-                        updatedRequestedCourses.add(course);
-                    }
-                }
-
-                // Yeni listeyi mevcut öğrenci nesnesine yerleştir
-                existingStudent.getEnrolledCourses().clear();
-                existingStudent.getEnrolledCourses().addAll(updatedEnrolledCourses);
-
-                existingStudent.getRequestedCourses().clear();
-                existingStudent.getRequestedCourses().addAll(updatedRequestedCourses);
-            } else {
-                existingStudent = updatedStudent;
-            }
-
-            // JSON'a yaz
-            objectMapper.writerWithDefaultPrettyPrinter().writeValue(studentFile, existingStudent);
-            System.out.println("Student JSON updated successfully!");
-
-        } catch (IOException e) {
-            System.err.println("Error updating student JSON: " + e.getMessage());
-        }
-    }
-
-
-    public Course loadCourseFromJson(String courseId) {
-        try {
-            ObjectMapper objectMapper = new ObjectMapper();
-            File coursesFile = new File("CSE3063F24P1_GRP14/src/resources/course.json");
-            List<Course> courses = Arrays.asList(objectMapper.readValue(coursesFile, Course[].class));
+            List<Course> updatedCourses = new ArrayList<>();
             for (Course course : courses) {
-                if (course.getCourseId().equals(courseId)) {
-                    return course;
+                if (course.getCourseId().equals(updatedCourse.getCourseId())) {
+                    updatedCourses.add(updatedCourse);
+                } else {
+                    updatedCourses.add(course);
                 }
             }
+
+            objectMapper.writerWithDefaultPrettyPrinter().writeValue(file, updatedCourses);
+            System.out.println("Course JSON updated successfully!");
         } catch (IOException e) {
-            System.err.println("Error loading course from JSON: " + e.getMessage());
+            System.err.println("Error updating course JSON: " + e.getMessage());
         }
-        return null;
     }
 
+    // Tüm öğrencileri JSON'dan yükler
+    public List<Student> loadAllStudents() {
+        try {
+            File studentsDir = new File(STUDENT_JSON_PATH);
+            File[] studentFiles = studentsDir.listFiles((dir, name) -> name.endsWith(".json"));
+            List<Student> students = new ArrayList<>();
 
+            if (studentFiles != null) {
+                ObjectMapper objectMapper = new ObjectMapper();
+                for (File studentFile : studentFiles) {
+                    students.add(objectMapper.readValue(studentFile, Student.class));
+                }
+            }
+            return students;
+        } catch (IOException e) {
+            System.err.println("Error loading all students from JSON: " + e.getMessage());
+            return new ArrayList<>();
+        }
+    }
 }
